@@ -1,4 +1,6 @@
+from __future__ import with_statement
 import re
+import warnings
 from django.template import Template, Context, get_library
 from django.test import TestCase, Client
 from django.conf import settings as django_settings
@@ -39,6 +41,7 @@ class PreviewTests(TestCase):
                           {'data': 'replace this with something else'})
         self.assertTemplateUsed(response, 'markitup/preview.html')
 
+
 class MIUTestCase(TestCase):
     def assertIn(self, needle, haystack):
         self.failUnless(needle in haystack,
@@ -53,6 +56,25 @@ class MIUTestCase(TestCase):
         t = Template(template_string)
         return t.render(c).strip()
 
+
+class TemplatetagTests(MIUTestCase):
+    def test_markitup_head_deprecation_warning(self):
+        tpl_string = "{% load markitup_tags %}{% markitup_head %}"
+        if hasattr(warnings, 'catch_warnings'):
+            with warnings.catch_warnings(record=True) as w:
+                out = self.render(tpl_string)
+                # make sure it still works
+                self.assertIn('jquery.markitup.js', out)
+                self.assertEquals(len(w), 1)
+                self.failUnless(issubclass(w[-1].category, DeprecationWarning))
+        else:
+            # Python < 2.6, we can't catch warnings, just test it works
+            warnings.simplefilter('ignore', DeprecationWarning)
+            out = self.render(tpl_string)
+            warnings.resetwarnings()
+            self.assertIn('jquery.markitup.js', out)
+
+                      
 class RenderTests(MIUTestCase):
     def test_widget_render(self):
         widget = MarkItUpWidget()
@@ -63,7 +85,8 @@ class RenderTests(MIUTestCase):
         template = """{% load markitup_tags %}{% markitup_editor "my_id" %}"""
         self.assertIn('$("#my_id").markItUp(mySettings);',
                       self.render(template))
-                        
+
+
 class TemplatetagMediaUrlTests(MIUTestCase):
     prefix = '/media'
 
