@@ -2,6 +2,16 @@
 django-markitup changelog
 =========================
 
+2009-11-05 Carl Meyer <carl@dirtcircle.com>
+
+* Added test suite.
+
+* Deprecated ``markitup_head`` template tag in favor of
+  ``markitup_media``.
+
+* Added ``MARKITUP_MEDIA_URL`` setting to override base of relative
+  media URL paths.
+
 2009-11-04 Carl Meyer <carl@dirtcircle.com>
 
 * 0.3.0 release.
